[package]
name = "ionian"
version = "0.1.2"
edition = "2024"
description = "A fast and simple static site generator."
authors = ["Aleks Rutins <keeper at farthergate dot com>"]
repository = "https://github.com/aleksrutins/ionian.git"
homepage = "https://puma.farthergate.com"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.16.1"
deno_task_shell = "0.26.1"
glob = "0.3.3"
indicatif = "0.18.2"
lazy_static = "1.5.0"
mkdirp = "1.0.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
tera = "1.20.1"
tokio = "1.48.0"
toml = "0.9.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
